# duir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HELP.md  LICENSE  Makefile  README.md  clippy.toml  tarpaulin-report.json
.duir/: config.toml  state.toml
.githooks/: pre-commit
crates/duir-core/: Cargo.toml
crates/duir-core/fonts/: LICENSE.txt
crates/duir-core/src/: config.rs  conflict.rs  crypto.rs  diagram.rs  docx_export.rs  error.rs  file_storage.rs  legacy_import.rs  lib.rs  markdown_export.rs  markdown_export_tests.rs  markdown_import.rs  mcp_server.rs  model.rs  pdf_export.rs  s3_storage.rs  stats.rs  storage.rs  tree_ops.rs
crates/duir-core/src/docx_import/: emit.rs  mod.rs  parser.rs  tests.rs
crates/duir-core/src/markdown_import/: mod.rs  parse.rs  tests.rs
crates/duir-core/src/mcp_server/: mod.rs  tests.rs  tools.rs  tools_read.rs  tools_write.rs
crates/duir-core/src/tree_ops/: mod.rs  tests.rs
crates/duir-core/tests/: collapse_expand.rs  crypto.rs  integration_tests.rs  markdown.rs  mcp_socket.rs  storage.rs  tree_ops.rs
crates/duir-core/tests/common/: mod.rs
crates/duir-tui/: Cargo.toml
crates/duir-tui/src/: app.rs  clipboard.rs  completer.rs  event_focus.rs  event_helpers.rs  event_loop.rs  file_watcher.rs  help.rs  input.rs  main.rs  markdown_highlight.rs  markdown_view.rs  mcp_log.rs  note_editor.rs  password.rs  pty_tab.rs  render.rs  render_kiro.rs  render_note.rs  render_resolve.rs  syntax.rs  tab_style.rs  termbuf.rs  tests.rs  tree_view.rs
crates/duir-tui/src/app/: app_commands.rs  app_commands_file.rs  app_commands_misc.rs  app_commands_save.rs  app_crypto.rs  app_editor.rs  app_editor_filter.rs  app_files.rs  app_flags.rs  app_io.rs  app_kiron.rs  app_kiron_capture.rs  app_kiron_mcp.rs  app_kiron_mutation.rs  app_kiron_start.rs  app_resolve.rs  app_state.rs  app_tree.rs  app_tree_edit.rs  app_tree_move.rs  mod.rs  tree_row.rs
crates/duir-tui/src/input/: command.rs  edit.rs  mod.rs
crates/duir-tui/src/note_editor/: command.rs  command_ex.rs  editing.rs  insert.rs  mod.rs  motions.rs  normal.rs  normal_keys.rs  normal_keys_motion.rs  normal_keys_search.rs  util.rs  visual.rs
crates/duir-tui/src/termbuf/: mod.rs  parser.rs  parser_sgr.rs  tests.rs
crates/duir-tui/src/tests/: app_behavior.rs  bridge.rs  commands.rs  completer_tests.rs  crypto.rs  editor.rs  input_edit.rs  input_filter.rs  input_other.rs  input_tree.rs  kiro.rs  mcp.rs  mod.rs  multi_file.rs  tree_ops.rs
crates/omela-core/: Cargo.toml
crates/omela-core/src/: file_storage.rs  filter.rs  lib.rs  markdown_export.rs  markdown_import.rs  tree_ops.rs
crates/omela-tui/: Cargo.toml
crates/omela-tui/src/: app.rs  input.rs  main.rs  note_editor.rs  note_view.rs  tree_view.rs
planning/: README.md
planning/backlog/: 02-P0-terminal-ui.md  03-P2-s3-storage.md  04-P2-command-palette.md  05-P1-encrypted-subtrees.md  06-P2-markdown-highlighting.md  10-P0-typestate-refactor.md  11-P2-diagram-rendering.md  11.004-P3-terminal-diagram-preview.md  12-P0-kiro-integration.md  15-P1-post-user-testing-roadmap.md
planning/done/: 01-P0-core-data-model.md  01.001-P0-json-serialization.md  01.002-P0-tree-operations.md  01.003-P0-completion-stats.md  01.005-P1-markdown-import.md  01.006-P1-filter-search.md  01.007-P2-legacy-import.md  02.001-P0-app-shell.md  06-P2-markdown-highlighting.md  07-P3-export-docx.md  08-P1-editor-polish.md  11.003-P2-docx-diagram-embed.md  12-P0-kiro-integration.md  13-P0-stable-identity.md  14-P1-mcp-server-integration.md
planning/ondeck/: 01.004-P1-markdown-export.md  05-P1-encrypted-subtrees.md  09.001-P0-integration-tests.md  11.001-P2-diagram-detection.md  11.002-P2-diagram-renderer.md  txv-components-proposal.md  txv-migration-guide.md  txv-migration-plan.md  txv-migration-risks-loe.md
