[package]
name = "duir-core"
description = "Core library for duir: hierarchical todo tree with markdown notes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
age = { package = "age", version = "0.11", features = ["armor"] }
base64 = "0.22"
docx-rs = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
