[package]
name = "duir-core"
description = "Core library for duir: hierarchical todo tree with markdown notes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["crypto", "yaml", "toml-config", "docx", "pdf", "s3", "markdown"]
crypto = ["dep:age", "dep:base64"]
yaml = ["dep:serde_yaml", "dep:quick-xml"]
toml-config = ["dep:toml", "dep:dirs"]
docx = ["dep:docx-rs", "dep:quick-xml", "dep:zip", "markdown"]
pdf = ["dep:genpdf"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:tokio"]
markdown = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
age = { package = "age", version = "0.11", features = ["armor"], optional = true }
base64 = { version = "0.22", optional = true }
docx-rs = { version = "0.4", optional = true }
genpdf = { version = "0.2", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
quick-xml = { version = "0.37", optional = true }
zip = { version = "2", optional = true }
dirs = { version = "6", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
