[package]
name = "duir-tui"
description = "Terminal UI for duir hierarchical todo tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
duir-core = { path = "../duir-core" }
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
regex = "1"
base64 = "0.22"
syntect = "5.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
vte = "0.13"
chrono = "0.4"

tempfile = "3"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
