[package]
name = "omela-tui"
description = "Terminal UI for omela hierarchical todo tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
omela-core = { path = "../omela-core" }
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"

[dev-dependencies]
pretty_assertions = "1"
